Versão - Pedroso - Plataforma dao e model e jsp feitos
aa

--- a/web/index.html
+++ b/web/index.html
@@ -5,21 +5,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>MyGameList</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <frameset cols="310, *" noresize="noresize" frameborder="0.">
-        <frame src="menu.html" name="menu_page"/>
-        <frame src="main.html" name="main_page"/>         
-        <noframes>
-            <div class="menu">
-                <a class="active" href="cadastro/cadastro.html" target="main_page">Home</a>
-                <a href="meuperfil/meuperfil.html" target="main_page">Seu perfil</a>
-                <a href="desenvolvedora/desenvolvedora.html" target="main_page">Desenvolvedoras</a>
-                <a href="plataformas/plataformas.html" target="main_page">Plataformas</a><br>
-                <a href="#about" target="main_page">Jogos</a>
-            </div>
-        </noframes>
-    </frameset>
+    <body>
+        <div>TODO write content</div>
+    </body>
 </html>
