--- a/web/menu.html
+++ b/web/menu.html
@@ -5,16 +5,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
   <head>
-    <title>Mygamelist</title>
+    <title>MyGameList</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="menu">
-        <a class="active" href="menu.html">Menu</a>
-        <a href="cadastro/index.html" target="main_page">Cadastro</a>
-        <a href="#contact" target="main_page">Contato</a>
-        <a href="#about" target="main_page">Sobre</a>
+        <a class="active" href="cadastro/cadastro.html" target="main_page">Home</a><br>
+        <a href="meuperfil/meuperfil.html" target="main_page">Seu perfil</a><br>
+        <a href="desenvolvedora/desenvolvedora.html" target="main_page">Desenvolvedoras</a><br>
+        <a href="plataformas/plataformas.html" target="main_page">Plataformas</a><br>
+        <a href="jogos/jogos.html" target="main_page">Jogos</a><br>
     </div>
   </body>
 </html>
