--- a/web/main.html
+++ b/web/main.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
 <html>
-    <head>
-        <title>Mygmaelist</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body bgcolor="#ffffff">        
-        <img src="imagens/logo.png" alt=""/>
-    </body>
+<head>
+    <title>MyGameList</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        
+        /* Estilo da imagem */
+        .logo {
+            width: 300px; /* Largura fixa (ajuste conforme necessário) */
+            margin-top: 50px; /* Distância do topo */
+        }
+        .text{
+            text-align: center;
+            margin-top: 50px;
+        }
+        p {
+            font-size: 1.3rem;
+            max-width: 500px;
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+    <!-- Imagem diretamente no HTML -->
+    <img class="logo" src="imagens/logo.png" alt="Logo MyGameList">
+    <div class="text">
+        <p>Seja bem vindo ao seu site Wiki de Games favorito!!</p>
+    </div>
+</body>
 </html>
-
