login cadastro e dao

--- a/web/desenvolvedora/desenvolvedora.html
+++ b/web/desenvolvedora/desenvolvedora.html
@@ -36,7 +36,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><img class="logo" src="imagens/nintendo.png"></td>
+                    <td><img class="logo" src="imagens/rockstar-games-logo.png"></td>
                     <td>Rockstar Games Inc</td>
                     <td>1998</td>
                     <td>50</td>
