--- a/web/cadastro.html
+++ b/web/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyGameList - Jogos</title>
+    <title>MyGameList - Cadastro</title>
     <style>
         * {
             margin: 0;
@@ -101,27 +101,33 @@
 </head>
 <body>
     <div class="form-container">
-        <h1 class="form-title">Cadastro de jogos</h1>
+        <h1 class="form-title">Cadastro</h1>
 
-        <form method="post" action="">
+        <form method="post" action="cadastro/cadastro.jsp">
             <div class="input-group">
-                <label for="nome_jogo" class="input-label">Nome do Jogo</label>
-                <input type="text" id="nome" class="form-input" placeholder="Digite seu nome" required>
+                <label for="nome" class="input-label">Nome completo</label>
+                <input type="text" id="nome"  name="nome" class="form-input" placeholder="Digite seu nome" required>
             </div>
 
             <div class="input-group">
-                <label for="email" class="input-label">Descrição</label>
-                <input type="text" id="text" class="form-input" required>
+                <label for="email" class="input-label">E-mail</label>
+                <input type="email" id="email" name="email" class="form-input" placeholder="exemplo@email.com" required>
             </div>
 
             <div class="input-group">
-                <label for="nascimento" class="input-label">Data de lançamento</label>
-                <input type="date" id="lancamento" class="form-input" required>
+                <label for="senha" class="input-label">Senha</label>
+                <input type="password" id="senha" name="senha" class="form-input" placeholder="Crie uma senha" required>
             </div>
 
-            <button type="submit" class="form-button">Cadastrar</button>
+            <div class="input-group">
+                <label for="nascimento" class="input-label">Data de nascimento</label>
+                <input type="date" name="nascimento" id="nascimento" class="form-input" required>
+            </div>
+
+            <button type="submit" value="cadastrar" class="form-button">Cadastrar</button>
         </form>
 
+        <p class="form-footer">Já tem uma conta? <a href="index.html">Faça login</a></p>
     </div>
 </body>
 </html>
