--- a/web/meuperfil/meuperfil.html
+++ b/web/meuperfil/meuperfil.html
@@ -192,7 +192,7 @@
                 <p>Ansioso com o lançamento do GTA VI, já zerei GOD of WAR está na hora de outro desafio!!</p>
             </div>
             
-            <a href="listajogos/listajogos.html" class="games-link">Meus Jogos</a>
+            <a href="/WebAppjogo/meuperfil/listajogos/listajogos.jsp" class="games-link">Meus Jogos</a>
         </div>
 
         <script>
