--- a/web/desenvolvedora/desenvolvedora.html
+++ b/web/desenvolvedora/desenvolvedora.html
@@ -1,48 +1,122 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Plataformas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>MyGameList - Desenvolvedora</title>
     <style>
-       body{
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        font-family: Arial, sans-serif;
-    }
-    .tables {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: #000;
-        font-family: Arial, sans-serif;
-        padding: 20px;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Arial, sans-serif; /* Fonte moderna */
+        }
+        
+        body {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        .form-container {
+            width: 100%;
+            max-width: 400px;
+            padding: 30px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-title {
+            font-size: 24px;
+            font-weight: 600;
+            color: #333;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .input-group {
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+
+        .input-label {
+            display: block;
+            font-size: 14px;
+            font-weight: 500;
+            color: #555;
+            margin-bottom: 8px;
+        }
+
+        .form-input {
+            width: 100%;
+            padding: 12px 15px;
+            font-size: 16px;
+            border: 2px solid #ddd;
+            border-radius: 6px;
+            transition: border-color 0.3s;
+        }
+
+        .form-input:focus {
+            border-color: #667eea;
+            outline: none;
+        }
+
+        .form-button {
+            width: 100%;
+            padding: 14px;
+            font-size: 16px;
+            font-weight: 600;
+            color: white;
+            background: linear-gradient(to right, #667eea, #764ba2);
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+        }
+
+        .form-button:hover {
+            opacity: 0.9;
+        }
+
+        /* --- Texto de Rodapé --- */
+        .form-footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+            color: #666;
+        }
+
+        .form-footer a {
+            color: #667eea;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
     </style>
 </head>
 <body>
-    <div class="tables">
-        <h1>Desenvolvedoras</h1>
-    </div>
-    <div class="tables">
-        <table class= "table table-striped table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>Logo</th>
-                    <th>Razão Social</th>                        
-                    <th>Fundação</th>
-                    <th>Número de Jogos</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><img class="logo" src="imagens/rockstar-games-logo.png"></td>
-                    <td>Rockstar Games Inc</td>
-                    <td>1998</td>
-                    <td>50</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="form-container">
+        <h1 class="form-title">Cadastro de plataformas</h1>
+
+        <form method="post" action="desenvolvedora.jsp">
+            <div class="input-group">
+                <label for="nome_jogo" class="input-label">Nome da desenvolvedora</label>
+                <input name="nome" type="text" id="nome" class="form-input" placeholder="Digite o nome da desenvolvedora " required>
+            </div>
+
+            <div class="input-group">
+                <label for="email" class="input-label">País</label>
+                <input type="text" name="pais" id="text" class="form-input" required>
+            </div>
+
+            <button type="submit" class="form-button">Cadastrar</button>
+        </form>
+
     </div>
 </body>
 </html>
